--- a/src/index.html
+++ b/src/index.html
@@ -818,11 +818,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/7DemirchyanE.webp"
-                  alt="Team Members: Oncologist"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/7DemirchyanE.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/7DemirchyanE.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Oncologist"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">
                 Demirchyan E.
@@ -843,11 +849,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/4MazmanyanV.webp"
-                  alt="Team Members: Family Doctor"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/4MazmanyanV.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/4MazmanyanV.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Family Doctor"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Mazmanyan V.</p>
               <p class="team-member-name language language--ru invisible">
@@ -868,11 +880,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/8NersisyanS.webp"
-                  alt="Team Members: Senior Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/8NersisyanS.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/8NersisyanS.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Nurse"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Nersisyan S.</p>
               <p class="team-member-name language language--ru invisible">
@@ -893,11 +911,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/3SuqiasyanK.webp"
-                  alt="Team Members: Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/3SuqiasyanK.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/3SuqiasyanK.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Nurse"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Suqiasyan K.</p>
               <p class="team-member-name language language--ru invisible">
@@ -916,11 +940,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/9Sirekyan.webp"
-                  alt="Team Members: Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/9Sirekyan.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/9Sirekyan.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Nurse"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Sirekanyan G.</p>
               <p class="team-member-name language language--ru invisible">
@@ -939,11 +969,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/6QocharyanS .webp"
-                  alt="Team Members: Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/6QocharyanS.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/6QocharyanS.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Nurse"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Qocharyan S.</p>
               <p class="team-member-name language language--ru invisible">
@@ -962,11 +998,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/5GarakeshishyanS.webp"
-                  alt="Team Members: Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/5GarakeshishyanS.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/5GarakeshishyanS.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Nurse"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">
                 Garakeshishyan S.
@@ -987,11 +1029,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/10Karapetyan.webp"
-                  alt="Team Members: Nurse"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/10Karapetyan.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/10Karapetyan.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Caregiver"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">
                 Karapetyan E.
@@ -1012,11 +1060,17 @@
             </div>
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
-                <img
-                  src="./assets/content/images/team/2TantushyanR.webp"
-                  alt="Team Members: Caregiver"
-                  class="team-member-img shadow--dark"
-                />
+                <picture>
+                  <source
+                    srcset="./assets/content/images/team/2TantushyanR.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/team/2TantushyanR.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Caregiver"
+                  />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">
                 Tantushyan R.
