--- a/src/index.html
+++ b/src/index.html
@@ -260,11 +260,17 @@
             >
           </div>
           <div class="hero-img-box">
-            <img
-              src="./assets/content/images/Personnel 1 - cropped-enhanced.webp"
-              alt="Khnami Center nurses smiling for a group personnel picture"
-              class="hero-img shadow"
-            />
+            <picture>
+                  <source
+                    srcset="./assets/content/images/Personnel1cropped-enhanced.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/Personnel1cropped-enhanced.png"
+                    class="hero-img shadow"
+                    alt="Khnami Center nurses smiling for a group personnel picture"
+                  />
+            </picture>
           </div>
         </div>
       </section>
@@ -535,11 +541,22 @@
           <div class="gallery-element">
             <!-- gallery image -->
             <div class="gallery-img-box shadow--dark--strong">
+              <!-- <picture class="gallery-img">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-1.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-1.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+            </picture> -->
               <img
-                class="gallery-img"
-                src="./assets/content/images/gallery/Gallery-img-1.webp"
-                alt="Gallery Image 1"
-              />
+                    src="./assets/content/images/gallery/Gallery-img-1.jpg"
+                    alt="Cozy and sunny room"
+                    class="gallery-img"
+                  />
               <img
                 class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-2.webp"
@@ -630,15 +647,20 @@
           </ul>
         </nav>
         </div>
-        
         <!-- testimonials container -->
         <div class="testimonials container grid grid--2-cols">
           <div class="testimonial-box">
-            <img
-              src="./assets/content/images/customers/customer Sirush.webp"
-              alt="Customer Face"
-              class="testimonial-img margin-bot--sm"
-            />
+            <picture>
+                  <source
+                    srcset="./assets/content/images/customers/customerSirush.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/customers/customerSirush.jpg"
+                    class="testimonial-img margin-bot--sm"
+                    alt="Customer Face"
+                  />
+            </picture>
             <p class="testimonial-text margin-bot--sm language language--en">
               Professional staff, caring attitude. You are doing very important
               work to improve the quality of life of patients. Thank you!
@@ -668,11 +690,17 @@
             </span>
           </div>
           <div class="testimonial-box">
-            <img
-              src="./assets/content/images/customers/customer Ashot.webp"
-              alt="Customer Face"
-              class="testimonial-img margin-bot--sm"
-            />
+            <picture>
+                  <source
+                    srcset="./assets/content/images/customers/customerAshot.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/customers/customerAshot.jpg"
+                    class="testimonial-img margin-bot--sm"
+                    alt="Customer Face"
+                  />
+            </picture>
             <p class="testimonial-text margin-bot--sm language language--en">
               I would like to express my gratitude to the team at Khnami Center.
               They have a wonderful, caring and professional service.
@@ -701,11 +729,17 @@
             </span>
           </div>
           <div class="testimonial-box">
-            <img
-              src="./assets/content/images/customers/customer Irina.webp"
-              alt="Customer Face"
-              class="testimonial-img margin-bot--sm"
-            />
+            <picture>
+                  <source
+                    srcset="./assets/content/images/customers/customerIrina.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/customers/customerIrina.jpg"
+                    class="testimonial-img margin-bot--sm"
+                    alt="Customer Face"
+                  />
+            </picture>
             <p class="testimonial-text margin-bot--sm language language--en">
               My immense gratitude to the entire staff of the Khnami Center for
               your work and professionalism. Thanks to you, I have returned to
@@ -736,11 +770,17 @@
             </span>
           </div>
           <div class="testimonial-box">
-            <img
-              src="./assets/content/images/customers/customer Anahit.webp"
-              alt="Customer Face"
-              class="testimonial-img margin-bot--sm"
-            />
+              <picture>
+                  <source
+                    srcset="./assets/content/images/customers/customerAnahit.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/customers/customerAnahit.jpg"
+                    class="testimonial-img margin-bot--sm"
+                    alt="Customer Face"
+                  />
+              </picture>
             <p class="testimonial-text margin-bot--sm language language--en">
               Thank you very much for your caring attitude and professional
               approach! A special thanks to the director Mrs. Dianna for her
