--- a/src/index.html
+++ b/src/index.html
@@ -541,7 +541,7 @@
           <div class="gallery-element">
             <!-- gallery image -->
             <div class="gallery-img-box shadow--dark--strong">
-              <!-- <picture class="gallery-img">
+              <picture class="gallery-picture">
                   <source
                     srcset="./assets/content/images/gallery/Gallery-img-1.webp"
                     type="image/webp"
@@ -551,42 +551,73 @@
                     class="gallery-img"
                     alt="Cozy and sunny room"
                   />
-            </picture> -->
-              <img
-                    src="./assets/content/images/gallery/Gallery-img-1.jpg"
-                    alt="Cozy and sunny room"
-                    class="gallery-img"
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-2.webp"
+                    type="image/webp"
                   />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-2.webp"
-                alt="Gallery Image 2"
-              />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-3.webp"
-                alt="Gallery Image 3"
-              />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-4.webp"
-                alt="Gallery Image 4"
-              />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-5.webp"
-                alt="Gallery Image 5"
-              />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-6.webp"
-                alt="Gallery Image 6"
-              />
-              <img
-                class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-7.webp"
-                alt="Gallery Image 7"
-              />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-2.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-3.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-3.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-4.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-4.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-5.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-5.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-6.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-6.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-7.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-7.jpg"
+                    class="gallery-img"
+                    alt="Cozy and sunny room"
+                  />
+              </picture>
             </div>
             <!-- gallery buttons -->
             <btn class="gallery-btn gallery-btn-left">
