--- a/src/index.html
+++ b/src/index.html
@@ -560,7 +560,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-2.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Warm and nice room"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -571,7 +571,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-3.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Good room with a TV and a nuce view"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -582,7 +582,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-4.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="White and clean room"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -593,7 +593,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-5.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Reception and hall"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -604,7 +604,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-6.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Comfortable beds for patients with special needs"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -615,7 +615,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-7.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Cozy corner with sofas and armchairs"
                   />
               </picture>
             </div>
