--- a/src/index.html
+++ b/src/index.html
@@ -1413,7 +1413,7 @@
             Արմենիկումի շենք, 3-րդ հարկ
           </p>
           <p class="footer-contact-phone">(+374) 93 577539</p>
-          <p class="footer-contact-email">khnamicenter@yahoo.com</p>
+          <p class="footer-contact-email">contact@khnami-center.com</p>
         </div>
         <!-- language select -->
         <div class="footer-item footer-lang-select flex-column padding-top--sm">
