--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,7 @@
                   Комфорт и приватность
                 </p>
                 <p class="language language--arm invisible">
-                  Հարմարավետութ և պրիվատ
+                  Հարմարավետ և պրիվատ
                 </p>
               </li>
               <li class="service">
