--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,6 @@
     }
   </style>
   <body>
-    <!-- TEST FLOAT  -->
-    <!-- <div class="floating"></div> -->
-    <!-- TEST FLOAT  -->
     <!-- HEADER -->
     <div class="header-background"></div>
     <header class="header container flex--centered-vertically">
@@ -141,7 +138,7 @@
                 alt="ARM flag"
                 class="flag-img"
               />
-              <p class="armenian">Հայերեն</p>
+              <p class="armenian header--lang-select--armenian">Հայերեն</p>
               </a
             >
             <a href="" class="lang-select lang-select--ru">
@@ -1453,7 +1450,7 @@
                   alt="ARM flag"
                   class="flag-img"
                 />
-                <p class="armenian">Հայերեն</p></a
+                <p class="armenian footer--lang-select--armenian">Հայերեն</p></a
               >
               <a href="#" class="lang-select lang-select--ru">
                 <img
@@ -1515,7 +1512,7 @@
         "<br> Contact Number: " +  
         document.getElementById("contact_number").value +
         "<br> Contact Email: " +  
-        document.getElementById("contact_number").value
+        document.getElementById("contact_email").value
         }).then(
           message => alert("Form Submitted Succesfully!")
         );
