--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,15 @@
       href="./assets/content/images/favicon.png"
     />
     <title>Khnami &mdash; Palliative care center</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQBHPDK9E4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EQBHPDK9E4');
+    </script>
   </head>
   <style>
     .invisible {
