--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
                   <img
                     src="./assets/content/images/Personnel1cropped-enhanced.png"
                     class="hero-img shadow"
-                    alt="Khnami Center nurses smiling for a group personnel picture"
+                    alt="Khnami palliative center nurses |  Խնամի պալիատիվ կենտրոնի բուժքույրեր"
                   />
             </picture>
           </div>
@@ -555,7 +555,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-1.jpg"
                     class="gallery-img"
-                    alt="Cozy and sunny room"
+                    alt="Palliative care room Yerevan | Պալիատիվ խնամքի պալատ Երևան"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -566,7 +566,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-2.jpg"
                     class="gallery-img"
-                    alt="Warm and nice room"
+                    alt="Palliative care room Yerevan | Պալիատիվ խնամքի պալատ Երևան"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -577,7 +577,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-3.jpg"
                     class="gallery-img"
-                    alt="Good room with a TV and a nuce view"
+                    alt="Palliative room with TV | Պալիատիվ պալատ հեռուստացույցով"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -588,7 +588,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-4.jpg"
                     class="gallery-img"
-                    alt="White and clean room"
+                    alt="Palliative care room Yerevan | Պալիատիվ խնամքի պալատ Երևան"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -599,7 +599,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-5.jpg"
                     class="gallery-img"
-                    alt="Reception and hall"
+                    alt= "Palliative care center reception | Պալիատիվ խնամքի կենտռոնի ընդունարան"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -610,7 +610,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-6.jpg"
                     class="gallery-img"
-                    alt="Comfortable beds for patients with special needs"
+                    alt="Beds for patients with special needs | Մահճակալներ հատուկ կարիքներով հիվանդների համար"
                   />
               </picture>
               <picture class="gallery-picture invisible">
@@ -621,7 +621,7 @@
                   <img
                     src="./assets/content/images/gallery/Gallery-img-7.jpg"
                     class="gallery-img"
-                    alt="Cozy corner with sofas and armchairs"
+                    alt="Cozy corner with sofas and armchairs | Հարմարավետ անկյուն՝ բազմոցներով և բազկաթոռներով"
                   />
               </picture>
             </div>
