--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <meta
       name="description"
       lang="arm"
-      content="Խնամի կենտրոնը պալիատիվ օգնություն և խնամք է ցուցաբերում Երևանի և հարակից մարզերի տարեց և չափահաս բնակչությանը։"
+      content="Խնամի կենտրոնը պալիատիվ օգնություն և խնամք է ցուցաբերում Երևանի և ՀՀ մարզերի տարեց և չափահաս բնակչությանը։"
     />
     <meta name="keywords" content="palliative, care, help, паллиативный, уход, помощь, պալիատիվ, խնամք, օգնություն">
     <!-- Favicon Package -->
@@ -235,16 +235,13 @@
             </h1>
             <!-- hero description -->
             <p class="hero-description language language--en">
-              The Khnami Center provides palliative care to the elderly and
-              adult population of Yerevan and the surrounding regions.
+              The Khnami Center provides palliative care to patients with chronic diseases.
             </p>
             <p class="hero-description language language--ru invisible">
-              Центр «Хнами» оказывает паллиативную помощь пожилому и взрослому
-              населению Еревана и близких районов.
+              Центр «Хнами» оказывает паллиативную помощь пациентам с тяжелыми хроническими заболеваниями.
             </p>
             <p class="hero-description language language--arm invisible">
-              Խնամի կենտրոնը ցուցաբերում է պալիատիվ օգնություն Երևանի և հարակից
-              մարզերի տարեց և չափահաս բնակչությանը։
+              Խնամի կենտրոնը ցուցաբերում է պալիատիվ օգնություն ծանր քրոնիկ հիվանդներին։
             </p>
             <!-- hero cta -->
             <a
@@ -300,10 +297,10 @@
               Accomodation
             </p>
             <p class="services-box-header language language--ru invisible">
-              Жилье
+              Условия
             </p>
             <p class="services-box-header language language--arm invisible">
-              Կացարան
+              Պայմաններ
             </p>
             <div class="services-icon-box">
               <ion-icon
@@ -319,12 +316,12 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
-                <p class="language language--en">8 sunny and bright rooms</p>
+                <p class="language language--en">Sunny and bright rooms</p>
                 <p class="language language--ru invisible">
-                  8 солнечных и светлых комнат
+                  Комфортные комнаты
                 </p>
                 <p class="language language--arm invisible">
-                  8 արևշատ և լուսավոր սենյակ
+                  Հարմարևետ սենյակներ
                 </p>
               </li>
               <li class="service">
@@ -336,10 +333,10 @@
                 </div>
                 <p class="language language--en">Comfort and privacy</p>
                 <p class="language language--ru invisible">
-                  Комфорт и приватность
+                  Отдельные санузлы
                 </p>
                 <p class="language language--arm invisible">
-                  Հարմարավետ և պրիվատ
+                  Առանձին սանհանգույց
                 </p>
               </li>
               <li class="service">
@@ -349,12 +346,12 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
-                <p class="language language--en">Own bathrooms with shower</p>
+                <p class="language language--en">Private bathrooms</p>
                 <p class="language language--ru invisible">
-                  Собственные санузлы с душем
+                  ТВ и интернет
                 </p>
                 <p class="language language--arm invisible">
-                  Սեփական լոգարաններ ցնցուղով
+                  TV և ինտերնետ
                 </p>
               </li>
               <li class="service">
@@ -368,10 +365,10 @@
                   TV, internet and a refrigerator
                 </p>
                 <p class="language language--ru invisible">
-                  ТВ, интернет и холодильник
+                  Холодильник
                 </p>
                 <p class="language language--arm invisible">
-                  TV, ինտերնետ և սառնարան
+                  Սառնարան
                 </p>
               </li>
             </ul>
@@ -383,7 +380,7 @@
               Ежедневный Уход
             </p>
             <p class="services-box-header language language--arm invisible">
-              Ամենօրյա Խնամք
+              Մասնագիտացված Խնամք
             </p>
             <div class="services-icon-box">
               <ion-icon
@@ -432,7 +429,7 @@
                   Гигиенические процедуры
                 </p>
                 <p class="language language--arm invisible">
-                  Հիգիենայի ընթացակարգեր
+                  Հիգիենայի միջոցառումներ
                 </p>
               </li>
               <li class="service">
@@ -505,10 +502,10 @@
                 </div>
                 <p class="language language--en">Centrally supplied oxygen</p>
                 <p class="language language--ru invisible">
-                  Центральная подача кислорода
+                  Централизованный кислород
                 </p>
                 <p class="language language--arm invisible">
-                  Կենտրոնական թթվածին
+                  Կենտրոնացված թթվածին
                 </p>
               </li>
               <li class="service">
@@ -523,7 +520,7 @@
                   Профилактические процедуры
                 </p>
                 <p class="language language--arm invisible">
-                  Կանխարգելիչ ընթացակարգեր
+                  Կանխարգելիչ միջոցառումներ
                 </p>
               </li>
             </ul>
