--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
       content="Խնամի կենտրոնը պալիատիվ օգնություն և խնամք է ցուցաբերում Երևանի և ՀՀ մարզերի տարեց և չափահաս բնակչությանը։"
     />
     <meta name="keywords" content="palliative, care, help, паллиативный, уход, помощь, պալիատիվ, խնամք, օգնություն">
+    <meta property="og:title" content="Khnami Palliative Care Center"/>
+    <meta property="og:description" content="We provide palliative care to patients with chronic diseases."/>
+    <meta property="og:image" content="https://khnami-center.com/assets/content/images/ogImage.jpg"/>
     <!-- Favicon Package -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -48,6 +51,7 @@
       href="./assets/content/images/favicon_package/safari-pinned-tab.svg"
       color="#5bbad5"
     />
+    <link rel="canonical" href="https://khnami-center.com/">
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- CSS -->
@@ -396,6 +400,23 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
+                <p class="language language--en">
+                  Doctor's supervision
+                </p>
+                <p class="language language--ru invisible">
+                  Врачебный контроль
+                </p>
+                <p class="language language--arm invisible">
+                  Բժշկի հսկողություն
+                </p>
+              </li>
+              <li class="service">
+                <div class="checkmark">
+                  <ion-icon
+                    name="checkmark-outline"
+                    class="checkmark-icon"
+                  ></ion-icon>
+                </div>
                 <p class="language language--en">24/7 nursing care</p>
                 <p class="language language--ru invisible">
                   24/7 уход за больными
@@ -430,23 +451,6 @@
                 </p>
                 <p class="language language--arm invisible">
                   Հիգիենայի միջոցառումներ
-                </p>
-              </li>
-              <li class="service">
-                <div class="checkmark">
-                  <ion-icon
-                    name="checkmark-outline"
-                    class="checkmark-icon"
-                  ></ion-icon>
-                </div>
-                <p class="language language--en">
-                  Bed linen, household items
-                </p>
-                <p class="language language--ru invisible">
-                  Белье и бытовые предметы 
-                </p>
-                <p class="language language--arm invisible">
-                  Սպիտակեղեն և կենցաղային իրեր
                 </p>
               </li>
             </ul>
