--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       href="./assets/content/images/favicon_package/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="canonical" href="https://khnami-center.com/">
+    <link rel="canonical" href="https://khnami-center.com">
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- CSS -->
