--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <meta name="keywords" content="palliative, care, help, паллиативный, уход, помощь, պալիատիվ, խնամք, օգնություն">
     <meta property="og:title" content="Khnami Palliative Care Center"/>
     <meta property="og:description" content="We provide palliative care to patients with chronic diseases."/>
-    <meta property="og:image" content="https://khnami-center.com/assets/content/images/ogImage.jpg"/>
+    <meta property="og:image" content="https://www.khnami-center.com/assets/content/images/ogImage.jpg"/>
     <!-- Favicon Package -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -51,7 +51,7 @@
       href="./assets/content/images/favicon_package/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="canonical" href="https://khnami-center.com">
+    <link rel="canonical" href="https://www.khnami-center.com/">
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- CSS -->
