--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <meta property="og:title" content="Khnami Palliative Care Center"/>
     <meta property="og:description" content="We provide palliative care to patients with chronic diseases."/>
     <meta property="og:image" content="https://www.khnami-center.com/assets/content/images/ogImage.jpg"/>
+    <meta property="og:url" content="https://www.khnami-center.com"/>
     <!-- Favicon Package -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
