--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,7 @@
             <a
               href="tel:+37493577539"
               class="header-address-box flex--centered-vertically address-link"
+              onclick='window.open("tel:+37493577539");return false;'
             >
               <ion-icon name="call-outline" class="header-icon"></ion-icon>
               <div class="header-address-text">
