--- a/src/index.html
+++ b/src/index.html
@@ -627,6 +627,17 @@
                     alt="Cozy corner with sofas and armchairs | Հարմարավետ անկյուն՝ բազմոցներով և բազկաթոռներով"
                   />
               </picture>
+              <picture class="gallery-picture invisible">
+                  <source
+                    srcset="./assets/content/images/gallery/Gallery-img-8.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./assets/content/images/gallery/Gallery-img-8.jpg"
+                    class="gallery-img"
+                    alt="Palliative care and help official license | Պալիատիվ խնամքի և օգնության պաշտոնական լիցենզիա"
+                  />
+              </picture>
             </div>
             <!-- gallery buttons -->
             <btn class="gallery-btn gallery-btn-left">
@@ -679,6 +690,12 @@
               ></ion-icon>
             </li>
             <li class="gallery-nav-bullet" id="gallery_bullet_7">
+              <ion-icon
+                name="ellipse-outline"
+                class="gallery-nav-icon"
+              ></ion-icon>
+            </li>
+            <li class="gallery-nav-bullet" id="gallery_bullet_8">
               <ion-icon
                 name="ellipse-outline"
                 class="gallery-nav-icon"
