--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,11 @@
       content="Խնամի կենտրոնը պալիատիվ օգնություն և խնամք է ցուցաբերում Երևանի և ՀՀ մարզերի տարեց և չափահաս բնակչությանը։"
     />
     <meta name="keywords" content="palliative, care, help, паллиативный, уход, помощь, պալիատիվ, խնամք, օգնություն">
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.khnami-center.com"/>
     <meta property="og:title" content="Khnami Palliative Care Center"/>
     <meta property="og:description" content="We provide palliative care to patients with chronic diseases."/>
     <meta property="og:image" content="https://www.khnami-center.com/assets/content/images/ogImage.jpg"/>
-    <meta property="og:url" content="https://www.khnami-center.com"/>
     <!-- Favicon Package -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
