--- a/src/index.html
+++ b/src/index.html
@@ -323,7 +323,7 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
-                <p class="language language--en">Sunny and bright rooms</p>
+                <p class="language language--en">Comfortable rooms</p>
                 <p class="language language--ru invisible">
                   Комфортные комнаты
                 </p>
@@ -338,7 +338,7 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
-                <p class="language language--en">Comfort and privacy</p>
+                <p class="language language--en">Private bathrooms</p>
                 <p class="language language--ru invisible">
                   Отдельные санузлы
                 </p>
@@ -353,7 +353,7 @@
                     class="checkmark-icon"
                   ></ion-icon>
                 </div>
-                <p class="language language--en">Private bathrooms</p>
+                <p class="language language--en">TV and internet</p>
                 <p class="language language--ru invisible">
                   ТВ и интернет
                 </p>
@@ -369,7 +369,7 @@
                   ></ion-icon>
                 </div>
                 <p class="language language--en">
-                  TV, internet and a refrigerator
+                  Refrigerator
                 </p>
                 <p class="language language--ru invisible">
                   Холодильник
